# api-test-auto-generate

./: .gitignore  README.md  app.py  openapi.yaml  pyproject.toml
.github/workflows/: update-openapi.yml
app/api/: user.py
app/database/: config.py
app/models/: user.py
app/schemas/: user.py
docs/: index.html
src/api_app/: __init__.py  commands.py  config.py  extensions.py  models.py  routes.py
