[project]
name = "restapi-auto-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
dependencies = ["schemathesis (>=3.39.15,<4.0.0)", "requests (>=2.32.3,<3.0.0)", "fastapi (>=0.115.12,<0.116.0)", "uvicorn[standard] (>=0.34.0,<0.35.0)", "pydantic[email] (>=2.11.2,<3.0.0)", "sqlalchemy (>=2.0.0,<3.0.0)", "alembic (>=1.13.0,<2.0.0)", "python-dotenv (>=1.0.0,<2.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "restapi-auto-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
schemathesis = ">=3.39.15,<4.0.0"
requests = ">=2.32.3,<3.0.0"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = {extras = ["standard"], version = ">=0.34.0,<0.35.0"}
pydantic = {extras = ["email"], version = ">=2.11.2,<3.0.0"}
sqlalchemy = ">=2.0.0,<3.0.0"
alembic = ">=1.13.0,<2.0.0"
python-dotenv = ">=1.0.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-html = "^4.1.1"
